Update education controllers to use DTOs and create missing entities
Education Controllers Updated:
- FacilityController: Now uses FacilityRequest/Response DTOs
- StoryController: Now uses StoryRequest/Response DTOs
- SkillController: Now uses SkillRequest/Response DTOs
- PrincipalMessageController: Now uses PrincipalMessageRequest/Response DTOs
- StoryTypeController: Now uses StoryTypeRequest/Response DTOs

All controllers now:
- Use @Valid for request validation
- Return typed DTOs instead of Map<String, Object>
- Have improved type safety and API consistency

New Entities Created:
- ResearchRelatedMedia: Media files for research articles/journals
- IndexJournal: Index journal management
- IndexJournalArticle: Index journal articles
- IndexJournalVolume: Index journal volumes

New Repositories Created:
- ResearchRelatedMediaRepository
- IndexJournalRepository
- IndexJournalArticleRepository
- IndexJournalVolumeRepository

Documentation:
- COMPILATION_NOTES.md: Notes on Lombok annotation processing issues

Progress:
- Entities: 40/66 (60.6%)
- Repositories: 38/50+ (76%)
- DTOs: 26/30+ (87%)
- Controllers: 35/50+ (70%)